Fix words overflow issue in UploadFileOld when the screen is small

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -85,6 +85,10 @@ $h6: 0.625rem; //10px
     width: calc(100%/3);
     text-align: left;
     padding-left: 31px;
+    // deal with words overflow
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   &:hover {
     background-color: $light-grey;
